front feat, mod: add blank idealTypeSurvey page, refine cardOpening and aiSimulation

--- a/digitalCard-date-service/front_part/aiSimulation.html
+++ b/digitalCard-date-service/front_part/aiSimulation.html
@@ -82,10 +82,10 @@
             <div class="character-name">최성현</div>
           </div>
         </div>
-        <div class="character-card" data-character="우도혁" data-description="20살, 조용하고 고집있는 성격. ISTJ. 사진찍기를 좋아해요.">
-          <img src="./assets/우도혁.png" alt="우도혁">
+        <div class="character-card" data-character="" data-description="">
+          <img src="./assets/person.svg" alt="person">
           <div class="character-info">
-            <div class="character-name">우도혁</div>
+            <div class="character-name"></div>
           </div>
         </div>
       </div>
