front mod, feat: revise aiSimulation JS code, store safely API_KEYS,

--- a/digitalCard-date-service/front_part/aiSimulation.html
+++ b/digitalCard-date-service/front_part/aiSimulation.html
@@ -16,14 +16,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./css/aiSimulation.css">
   <link rel="shortcut icon" href="./assets/teamLogo.svg">
-  <script src="./src/aiSimulation.js/chatBot.js" type="module"></script>
+  <script src="./src/aiSimulation/chatBot.js" type="module"></script>
   <title>AI Love Simulation(AI 연애 시뮬)</title>
 </head>
 <body>
   <script src="./src/login/univ_api.js" defer></script>
   <script>
       document.addEventListener("DOMContentLoaded", () => {
-          checkAuth(); 
+         checkAuth(); 
       });
   </script>
   <header id="header" aria-label="title, logo">
