front refactor: refactor onboarding&login for better responsiveness

--- a/digitalCard-date-service/front_part/login.html
+++ b/digitalCard-date-service/front_part/login.html
@@ -33,17 +33,17 @@
                     <h1 class="login-title">대학 인증 로그인</h1>
                     <div class="input-field">
                         <label for="university">학교명</label>
-                        <input class="univ__input" type="text" id="university" placeholder="학교명: ex) 서울과학기술대학교">
+                        <input class="univ__input" type="text" id="university" placeholder="ex) 서울과학기술대학교">
                         <button class="btn univ__checkButton">확인</button>
                     </div>
                     <div class="input-field">
                         <label for="email">학교 이메일</label>
-                        <input class="email__input" type="email" id="email" placeholder="학교이메일: ex) honggildong@seoultech.ac.kr">
+                        <input class="email__input" type="email" id="email" placeholder="ex) honggildong@seoultech.ac.kr">
                         <button class="btn email__checkButton">전송</button>
                     </div>
                     <div class="input-field">
                         <label for="code">인증번호</label>
-                        <input class="prove__input" type="text" id="code" placeholder="인증번호 입력: ex) 1234">
+                        <input class="prove__input" type="text" id="code" placeholder="ex) 1234">
                         <button class="btn prove__checkButton">제출</button>
                     </div>
                     <div class="check__container">
