--- a/digitalCard-date-service/front_part/onboarding.html
+++ b/digitalCard-date-service/front_part/onboarding.html
@@ -88,11 +88,12 @@
                             <br>
                             Submit your card right now by entering simple information.
                         </p>
-                        <a class="ad__nextStep" href="#step1">NEXT</a>
+                        <a class="ad__nextStep" href="#step1_">NEXT</a>
                     </div>  
                 </div>     
             </div>
         </section>
+        <div id="step1_"></div>
         <section id="step1">
             <div class="max-container">
                 <div class="step1-container">
@@ -114,12 +115,13 @@
                                 3. If you have already verified, enter your email&click the button.
                             </p>        
                         </article>
-                        <a class="nextStepButton1" href="#step2">NEXT</a>
+                        <a class="nextStepButton1" href="#step2_">NEXT</a>
                     </div>                
                     <img class="step__img" src="./assets/step1.svg" alt="step1-img">
                 </div>
             </div>
         </section>
+        <div id="step2_"></div>
         <section id="step2">
             <div class="max-container">
                 <div class="step2-container">               
@@ -142,11 +144,12 @@
                                 3. Submit the form once you are done.
                             </p>                        
                         </article>
-                        <a class="nextStepButton2" href="#step3">NEXT</a>
+                        <a class="nextStepButton2" href="#step3_">NEXT</a>
                     </div>
                 </div>
             </div>          
         </section>
+        <div id="step3_"></div>
         <section id="step3">
             <div class="max-container">
                 <div class="step3-container">
@@ -211,7 +214,7 @@
                         </ul>
                     </div>
                     <div  class="start_nextStep-container">
-                        <p class="start_nextStep_desc">자.. 이제 떠나볼까요. 운명의 상대를 만나러!</p>
+                        <p class="start_nextStep_desc">자.. 이제 떠나볼까요.. 운명의 상대를 만나러!</p>
                         <a class="start_nextStep" href="./login.html"><img src="./assets/startButton.svg" alt=""></a>
                     </div>
                 </div>     
