front mod: modify onboarding nav_bar positioning, fortune card contents

--- a/digitalCard-date-service/front_part/onboarding.html
+++ b/digitalCard-date-service/front_part/onboarding.html
@@ -38,9 +38,9 @@
             <ul class="nav__menu">
                 <li class="nav__menu__item"><a class=" nav__active" href="#home">Home</a></li>
                 <li class="nav__menu__item"><a href="#ad">AD</a></li>
-                <li class="nav__menu__item"><a href="#step1">Step1</a></li>
-                <li class="nav__menu__item"><a href="#step2">Step2</a></li>
-                <li class="nav__menu__item"><a href="#step3">Step3</a></li>
+                <li class="nav__menu__item"><a href="#step1_">Step1</a></li>
+                <li class="nav__menu__item"><a href="#step2_">Step2</a></li>
+                <li class="nav__menu__item"><a href="#step3_">Step3</a></li>
                 <li class="nav__menu__item"><a href="#start">Start</a></li>
                 <li class="nav__menu__item"><a href="#contact">Contact</a></li>
             </ul>
@@ -181,35 +181,35 @@
             <div class="max-container">
                 <div class="start-container">
                     <div class="start_fortuneCard-container">
-                        <button class="start_cardButton">포츈카드 뽑기!</button>
+                        <button class="start_cardButton">포춘카드 뽑기!</button>
                         <ul>
                             <li class="start_card card1">
                                 <div class="start_card-front"></div>
-                                <div class="start_card-back">당신의 이상형이 바로 곁에 있어요!</div>
+                                <div class="start_card-back">당신의 이상형이 바로 곁에 있어요!<br><br>True love might be right infront of you!</div>
                             </li>
                             <li class="start_card card2">
                                 <div class="start_card-front"></div>
-                                <div class="start_card-back">당신에게 특별한 사람이 곧 찾아올 거예요.</div>
+                                <div class="start_card-back">당신에게 특별한 사람이 곧 찾아올 거예요.<br><br>Someone special is destined to find their way to you.</div>
                             </li>
                             <li class="start_card card3">
                                 <div class="start_card-front"></div>
-                                <div class="start_card-back">행운이 함께하는 오늘, 사랑을 느껴보세요.</div>
+                                <div class="start_card-back">행운이 함께하는 오늘, 사랑을 느껴보세요.<br><br>With lucky by your side today, let your heart discover love.</div>
                             </li>
                             <li class="start_card card4">
                                 <div class="start_card-front"></div>
-                                <div class="start_card-back">마음의 문을 열면 사랑이 들어옵니다.</div>
+                                <div class="start_card-back">마음의 문을 열면 사랑이 들어옵니다.<br><br>When you open your heart, love will find its way in.</div>
                             </li>
                             <li class="start_card card5">
                                 <div class="start_card-front"></div>
-                                <div class="start_card-back">특별한 인연은 오늘이 시작입니다.</div>
+                                <div class="start_card-back">특별한 인연은 오늘부터 시작됩니다.<br><br>A special connection begins today.</div>
                             </li>
                             <li class="start_card card6">
                                 <div class="start_card-front"></div>
-                                <div class="start_card-back">행운이 따르는 하루, 사랑도 가득합니다.</div>
+                                <div class="start_card-back">운명의 상대가 당신을 기다립니다!<br><br>Your destined soulmate is wating for you</div>
                             </li>
                             <li class="start_card card7">
                                 <div class="start_card-front"></div>
-                                <div class="start_card-back">오늘읜 연애의 기운이 느껴지지 않네요..</div>
+                                <div class="start_card-back">용기있는 자가 미녀를 얻는다.<br><br>Boldness wins hearts</div>
                             </li>
                         </ul>
                     </div>
