front mod: onboardiong&login page desgin Final finishing work

--- a/digitalCard-date-service/front_part/onboarding.html
+++ b/digitalCard-date-service/front_part/onboarding.html
@@ -26,6 +26,7 @@
     <script src="./src/onboarding//arrowUp.js" type="module"></script>
     <script src="./src/onboarding/sectionImgAni.js" type="module"></script>
     <script src="./src/onboarding/scrollToTop.js" type="module"></script>
+    <script src="./src/onboarding/responsiveButtonEffects.js" type="module"></script>
     <title>Card With Love(명함은 사랑을 싣고)</title>
 </head>
 <body>
@@ -93,7 +94,7 @@
                 </div>     
             </div>
         </section>
-        <div id="step1_"></div>
+        <div id="step1_"></div> <!-- nextbutton 클릭시 헤더에 내용이 블러처리되는 예외상황을 해결하기 위한 요소-->
         <section id="step1">
             <div class="max-container">
                 <div class="step1-container">
