front feat, mod: add cardWritting form-example modal, modify cardDrawing text-color

--- a/digitalCard-date-service/front_part/cardWritting.html
+++ b/digitalCard-date-service/front_part/cardWritting.html
@@ -21,7 +21,8 @@
     <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
     <script src="./src/cardWritting/changeAnimalImg.js" type="module"></script>
     <script src="./src/cardWritting/submit.js" type="module"></script>
-    <script src="./src/cardWritting/changeColor.js" type="module"></script>    
+    <script src="./src/cardWritting/changeColor.js" type="module"></script>
+    <script src="./src/cardWritting/modal.js" type="module"></script>   
     <title>Card Writting(카드작성)</title>
 </head>
 <body>
@@ -84,6 +85,7 @@
                     <button class="color c8" data-src="./assets/card_white.svg" data-mobile="./assets/card_white-mobile.svg"></button>
                 </div>
                 <button class="submitButton" type="submit">제출하기</button>
+                <button class="formCheckButton">양식예시</button>
             </div>
             <hr>
             <div class="animalImg-container">
@@ -105,15 +107,23 @@
                 <img src="./assets/16.turtle.png" alt="동물사진" class="animalImg img16">
             </div>
         </div>
+        <div id="modal">
+            <div class="modal-content">
+              <div class="modal-title">※ 작성양식을 준수하세요! 정확히 기재하여야 추천서비스 이용시 올바른 명함이 제공됩니다.</div>
+              <div class="modal-description">"1.성별(Gender): 남성(man)/여성(woman)<br><br>2.이름(Name): 자유롭게 기입(anything)<br><br>3.학과(Major): 학교에서 지정한 이름, 단 특수기호는 생략하고 붙여씁니다. 괄호는 허용합니다.<br>Name given by the school, but don't use special symbol and stick together. Parentheses are allowed.<br><br>4.학번(나이)(ClassNum(Age)): N학번(N살)<br><br>5.mbti: 대소문자 구분X(case not separated)<br><br>6.취미(Hobby): 자유롭게 한 단어로(anything, only use keyword)<br><br>7.연락처(contact): instagramID, kakaoID, phone number etc";
+            </div>
+              <button class="modal-button">확인</button>
+            </div>
+          </div>
     </main>
     <footer id="contact" aria-label="information of rights and developer">
         <div class="max-container">
             <div class="contact-container">
                 <div class="contact_rights-container">
                     <p>This website is copyrighted by © <strong>CHO MOON LEE JEONG</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
-                    <p>Lead Designer: <strong>Seo-in Lee </strong>(Assistant: Yu-chan Cho)</p>
-                    <p>Lead Front-End Developer: <strong>Yu-chan Cho</strong>(Assistant: Seo-in Lee)</p>
-                    <p>Lead Back-End Developers: <strong>Hyo-jae Moon & Da-un Jeong</strong></p>
+                    <p>Lead Designers: <strong>Seo-in LEE&CHO Yu-chan</strong></p>
+                    <p>Lead Front-End Developers: <strong>Yu-chan CHO&Seo-in LEE</strong></p>
+                    <p>Lead Back-End Developers: <strong>Hyo-jae MOON&Da-un JEONG</strong></p>
                 </div>
                 <div class="contact_rightPart-container">
                     <div class="contact__SNS-container">
