--- a/digitalCard-date-service/front_part/aiSimulation.html
+++ b/digitalCard-date-service/front_part/aiSimulation.html
@@ -76,7 +76,7 @@
             <div class="character-name">이지나</div>
           </div>
         </div>
-        <div class="character-card" data-character="최성현" data-description="27살, 배려심이 깊고 너드미가 있는. ESTJ. 코딩하는 것을 좋아해요.">
+        <div class="character-card" data-character="최성현" data-description="27살, 배려심 깊고 너드미 있는. ESTJ. 코딩하는 것을 좋아해요.">
           <img src="./assets/최성현.png" alt="최성현">
           <div class="character-info">
             <div class="character-name">최성현</div>
@@ -111,10 +111,10 @@
     <div class="max-container">
         <div class="contact-container">
             <div class="contact_rights-container">
-                <p>This website is copyrighted by © <strong>CHO MOON LEE JEONG</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
-                <p>Lead Designer: <strong>Seo-in Lee </strong>(Assistant: Yu-chan Cho)</p>
-                <p>Lead Front-End Developer: <strong>Yu-chan Cho</strong>(Assistant: Seo-in Lee)</p>
-                <p>Lead Back-End Developers: <strong>Hyo-jae Moon & Da-un Jeong</strong></p>
+              <p>This website is copyrighted by © <strong>CHO MOON LEE JEONG</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
+              <p>Lead Designers: <strong>Seo-in LEE&CHO Yu-chan</strong></p>
+              <p>Lead Front-End Developers: <strong>Yu-chan CHO&Seo-in LEE</strong></p>
+              <p>Lead Back-End Developers: <strong>Hyo-jae MOON&Da-un JEONG</strong></p>
             </div>
             <div class="contact_rightPart-container">
                 <div class="contact__SNS-container">
