front feat: make idealTypeSurvey page, mod all page of design interim work

--- a/digitalCard-date-service/front_part/aiSimulation.html
+++ b/digitalCard-date-service/front_part/aiSimulation.html
@@ -76,7 +76,7 @@
             <div class="character-name">이지나</div>
           </div>
         </div>
-        <div class="character-card" data-character="최성현" data-description="27살, 배려심 깊고 너드미 있는. ESTJ. 코딩하는 것을 좋아해요.">
+        <div class="character-card" data-character="최성현" data-description="27살, 배려심 깊고 너드미 있는. ESTJ. 코딩하는걸 좋아해요.">
           <img src="./assets/최성현.png" alt="최성현">
           <div class="character-info">
             <div class="character-name">최성현</div>
@@ -104,7 +104,7 @@
     </div>
     </main>
     <aside id="survey">
-      <p class="survey_desc">사이트 이용후기는 "<a class="survey_link" href="설문조사링크"><strong>여기</strong></a>"에 남겨주세요!<br>
+      <p class="survey_desc">사이트 이용후기는 "<a class="survey_link" href="https://forms.gle/V5ozKRdhYGrkiTox6"><strong>여기</strong></a>"에 남겨주세요!<br>
           더 나은 품질향상에 도움이 됩니다.</p>
     </aside>
   <footer id="contact" aria-label="information of rights and developer">
