--- a/digitalCard-date-service/front_part/cardWritting.html
+++ b/digitalCard-date-service/front_part/cardWritting.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./css/cardWritting.css">
     <link rel="shortcut icon" href="./assets/teamLogo.svg">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
     <script src="./src/cardWritting/changeAnimalImg.js" type="module"></script>
     <script src="./src/cardWritting/submit.js" type="module"></script>
@@ -52,7 +51,7 @@
                 </div>
                 <div class="form_row">
                     <label>학과 :</label>
-                    <input type="text" name="major" placeholder="컴퓨터공학과" required>
+                    <input type="text" name="major" placeholder="기계자동차학과" required>
                 </div>
                 <div class="form_row">
                     <label>학번(나이) :</label>
