front mod: modify color(all page) intermediate work

--- a/digitalCard-date-service/front_part/idealTypeSurvey.html
+++ b/digitalCard-date-service/front_part/idealTypeSurvey.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/idealTypeSurvey.css">
     <link rel="shortcut icon" href="./assets/teamLogo.svg">
     <script src="./src/idealTypeSurvey/selectedButton.js" type="module"></script>
+    <script src="./src/idealTypeSurvey/submitResult.js" type="module"></script>
     <title>Ideal-Type survey(이상형조사)</title>
 </head>
 <body>
