front mod: modify all design the first round of closing

--- a/digitalCard-date-service/front_part/cardDrawing.html
+++ b/digitalCard-date-service/front_part/cardDrawing.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/cardDrawing.css">
     <link rel="shortcut icon" href="./assets/teamLogo.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="./src/cardDrawing/modal.js" type="module"></script>
     <title>Card Drawing(카드뽑기)</title>
 </head>
@@ -54,6 +55,7 @@
             </div>
             <div class="modal-overlay"></div>
             <div class="modal">
+                <h1 class="modal_loading">뽑기중...</h1>
                 <div class="modal_card-container"></div>
                 <button class="drawButton">뽑기</button>
             </div>
@@ -63,10 +65,10 @@
         <div class="max-container">
             <div class="contact-container">
                 <div class="contact_rights-container">
-                    <p>This website is copyrighted by © <strong>CHO MOON LEE JEONG</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
+                    <p>This website is copyrighted by © <strong>CHO LEE</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
                     <p>Lead Designers: <strong>Seo-in LEE&CHO Yu-chan</strong></p>
                     <p>Lead Front-End Developers: <strong>Yu-chan CHO&Seo-in LEE</strong></p>
-                    <p>Lead Back-End Developers: <strong>Hyo-jae MOON&Da-un JEONG</strong></p>
+                    <p>Lead Back-End Developers: <strong>both</strong></p>
                 </div>
                 <div class="contact_rightPart-container">
                     <div class="contact__SNS-container">
