--- a/digitalCard-date-service/front_part/cardWriting.html
+++ b/digitalCard-date-service/front_part/cardWriting.html
@@ -22,7 +22,7 @@
     <script src="./src/cardWritting/submit.js" type="module"></script>
     <script src="./src/cardWritting/changeColor.js" type="module"></script>
     <script src="./src/cardWritting/modal.js" type="module"></script>   
-    <title>Card Writting(카드작성)</title>
+    <title>Card Writing(카드작성)</title>
 </head>
 <body>
     <script src="./src/login/univ_api.js" defer></script>
@@ -119,10 +119,10 @@
         <div class="max-container">
             <div class="contact-container">
                 <div class="contact_rights-container">
-                    <p>This website is copyrighted by © <strong>CHO MOON LEE JEONG</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
+                    <p>This website is copyrighted by © <strong>CHO LEE</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
                     <p>Lead Designers: <strong>Seo-in LEE&CHO Yu-chan</strong></p>
                     <p>Lead Front-End Developers: <strong>Yu-chan CHO&Seo-in LEE</strong></p>
-                    <p>Lead Back-End Developers: <strong>Hyo-jae MOON&Da-un JEONG</strong></p>
+                    <p>Lead Back-End Developers: <strong>both</strong></p>
                 </div>
                 <div class="contact_rightPart-container">
                     <div class="contact__SNS-container">
