--- a/digitalCard-date-service/front_part/onboarding.html
+++ b/digitalCard-date-service/front_part/onboarding.html
@@ -216,7 +216,7 @@
                     </div>
                     <div  class="start_nextStep-container">
                         <p class="start_nextStep_desc">자.. 이제 떠나볼까요.. 운명의 상대를 만나러!</p>
-                        <a class="start_nextStep" href="./login.html"><img src="./assets/startButton.svg" alt=""></a>
+                        <a class="start_nextStep" href="./login.html">START</a>
                     </div>
                 </div>     
             </div>
@@ -229,10 +229,10 @@
         <div class="max-container">
             <div class="contact-container">
                 <div class="contact_rights-container">
-                    <p>This website is copyrighted by © <strong>CHO MOON LEE JEONG</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
+                    <p>This website is copyrighted by © <strong>CHO LEE</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
                     <p>Lead Designers: <strong>Seo-in LEE&CHO Yu-chan</strong></p>
                     <p>Lead Front-End Developers: <strong>Yu-chan CHO&Seo-in LEE</strong></p>
-                    <p>Lead Back-End Developers: <strong>Hyo-jae MOON&Da-un JEONG</strong></p>
+                    <p>Lead Back-End Developers: <strong>both</strong></p>
                 </div>
                 <div class="contact_rightPart-container">
                     <div class="contact__SNS-container">
