--- a/digitalCard-date-service/front_part/aiSimulation.html
+++ b/digitalCard-date-service/front_part/aiSimulation.html
@@ -15,6 +15,7 @@
   <meta name="twitter:image" content="https://e293-203-246-85-181.ngrok-free.app/digitalCard-date-service/front_part/assets/teamLogo.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./css/aiSimulation.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="./assets/teamLogo.svg">
   <script src="./src/aiSimulation/chatBot.js" type="module"></script>
   <title>AI Love Simulation(AI 연애 시뮬)</title>
@@ -33,12 +34,12 @@
     </div>
 </header>
   <div class="container">
-    <h1 class="cheerUpMent">여러분들의 성공적인 연애를 진심으로 응원합니다<br><br>    
+    <h1 class="cheerUpMent">여러분들의 <span style="color: var(--color-accent-variant);">성공적인 연애</span>를 진심으로 <span style="color: skyblue;">응원</span>합니다!<br><br>    
         이성과의 대화 어렵지 않으세요?<br>
-        AI 챗봇이 도와드립니다!
+        <span style="color: #59bf77;"><u>AI 챗봇</u></span>이 도와드립니다!
     </h1>
-    <div class="title">연애 시뮬레이션 채팅봇</div>
-    <main id="main" aria-label="Select the AI ​chatbot character you want and chat with them">
+    <div class="title" style="color: #ffcc66;">연애 시뮬레이션 채팅봇</div>
+    <main id="main" aria-label="Select the AI chatbot character you want and chat with them">
       <div class="character-list">
         <div class="character-card" data-character="방민정" data-description="20살, 밝고 활발한 성격. ENFP. 서울숲을 걷는 걸 좋아해요.">
           <img src="./assets/방민정.png" alt="방민정">
@@ -85,7 +86,7 @@
         <div class="character-card" data-character="" data-description="">
           <img src="./assets/person.svg" alt="person">
           <div class="character-info">
-            <div class="character-name"></div>
+            <div class="character-name">운명의 상대</div>
           </div>
         </div>
       </div>
@@ -111,10 +112,10 @@
     <div class="max-container">
         <div class="contact-container">
             <div class="contact_rights-container">
-              <p>This website is copyrighted by © <strong>CHO MOON LEE JEONG</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
+              <p>This website is copyrighted by © <strong>CHO LEE</strong>. <br>Image credits for non-design elements: <a href="https://kr.freepik.com/">Freepik</a>, <a href="https://www.svgrepo.com/">SVGrepo</a>, <a href="https://www.svgbackgrounds.com/">SVGbackgrounds</a>, other blogs.</p>
               <p>Lead Designers: <strong>Seo-in LEE&CHO Yu-chan</strong></p>
               <p>Lead Front-End Developers: <strong>Yu-chan CHO&Seo-in LEE</strong></p>
-              <p>Lead Back-End Developers: <strong>Hyo-jae MOON&Da-un JEONG</strong></p>
+              <p>Lead Back-End Developers: <strong>both</strong></p>
             </div>
             <div class="contact_rightPart-container">
                 <div class="contact__SNS-container">
